--- a/_includes/analytics-providers/custom.html
+++ b/_includes/analytics-providers/custom.html
@@ -1,3 +1,11 @@
 <!-- start custom analytics snippet -->
-
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?2da4c7632751663f061154a1e8905e93";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 <!-- end custom analytics snippet -->
